@@ -26,6 +26,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
  - all - support float field type
  - capture - s3 writer uses IMDSv2 (thanks fj604)
  - capture - dscp src/dst (issue #1626)
+ - capture - initial GENEVE support
  - release - much improved arkime_config_interfaces.sh (thanks arkaØm)
  - viewer - stop upload menu showing up when empty command
  - viewer - improve first load time by spliting bundle and lazy load items
